diesel_compile_tests/tests/fail/numeric_ops_require_numeric_column.stderr
error[E0369]: cannot add `columns::name` to `columns::name`
  --> tests/fail/numeric_ops_require_numeric_column.rs:15:31
   |
LL |     let _ = users.select(name + name);
   |                          ---- ^ ---- columns::name
   |                          |
   |                          columns::name
   |
note: an implementation of `std::ops::Add` might be missing for `columns::name`
  --> tests/fail/numeric_ops_require_numeric_column.rs:8:9
   |
8  |         name -> VarChar,
   |         ^^^^ must implement `std::ops::Add`
note: the trait `std::ops::Add` must be implemented
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/core/src/ops/arith.rs:78:1
For more information about this error, try `rustc --explain E0369`.
